--- a/tables/results_seq_multiple.tex
+++ b/tables/results_seq_multiple.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{lrrrrrrrrr}
 \toprule
-     model &  HitRate@1 &  HitRate@5 &  HitRate@10 &  HitRate@20 &   MRR@5 &  MRR@10 &  MRR@20 &  Coverage@20 &  Popularity@20 \\
+ Algorithm &  HitRate@1 &  HitRate@5 &  HitRate@10 &  HitRate@20 &   MRR@5 &  MRR@10 &  MRR@20 &  Coverage@20 &  Popularity@20 \\
 \midrule
         AR &     0.5295 &     0.6875 &      0.7541 &      0.8126 &  0.5891 &  0.5980 &  0.6021 &       0.4658 &         0.0733 \\
         SR &     0.5305 &     0.7042 &      0.7653 &      0.8187 &  0.5981 &  0.6063 &  0.6101 &       0.8772 &         0.0724 \\
