--- a/tables/results_seq_multiple_cutoff_HR@20.tex
+++ b/tables/results_seq_multiple_cutoff_HR@20.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{lrrrrrr}
 \toprule
-     model &  position <= 2 &  position > 2 &  position <= 5 &  position > 5 &  position <= 10 &  position > 10 \\
+ Algorithm &  position <= 2 &  position > 2 &  position <= 5 &  position > 5 &  position <= 10 &  position > 10 \\
 \midrule
         AR &         0.6179 &        0.6769 &         0.6202 &        0.6820 &          0.6313 &         0.6887 \\
         SR &         0.6165 &        0.6920 &         0.6244 &        0.6977 &          0.6423 &         0.7037 \\
