--- a/tables/results_seq_multiple_droponoff.tex
+++ b/tables/results_seq_multiple_droponoff.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{lrrrrrrrrr}
 \toprule
-     model &  HitRate@1 &  HitRate@5 &  HitRate@10 &  HitRate@20 &   MRR@5 &  MRR@10 &  MRR@20 &  Coverage@20 &  Popularity@20 \\
+ Algorithm &  HitRate@1 &  HitRate@5 &  HitRate@10 &  HitRate@20 &   MRR@5 &  MRR@10 &  MRR@20 &  Coverage@20 &  Popularity@20 \\
 \midrule
         AR &     0.1993 &     0.4685 &      0.5804 &      0.6734 &  0.2995 &  0.3145 &  0.3209 &       0.4906 &         0.2551 \\
         SR &     0.2496 &     0.5017 &      0.6013 &      0.6874 &  0.3442 &  0.3578 &  0.3638 &       0.8554 &         0.2437 \\
