--- a/tables/results_seq_multiple_pos_HR@1.tex
+++ b/tables/results_seq_multiple_pos_HR@1.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{lrrrrrrrrrr}
 \toprule
-     model &  position = 1 &  position = 2 &  position = 3 &  position = 4 &  position = 5 &  position = 6 &  position = 7 &  position = 8 &  position = 9 &  position = 10 \\
+ Algorithm &  position = 1 &  position = 2 &  position = 3 &  position = 4 &  position = 5 &  position = 6 &  position = 7 &  position = 8 &  position = 9 &  position = 10 \\
 \midrule
         AR &        0.1350 &        0.1612 &        0.1662 &        0.1629 &        0.1763 &        0.1881 &        0.1991 &        0.1944 &        0.1756 &         0.1600 \\
         SR &        0.2126 &        0.2261 &        0.2306 &        0.2253 &        0.2145 &        0.2309 &        0.2359 &        0.2492 &        0.2171 &         0.2321 \\
