--- a/tables/results_seq_multiple_pos_HR@20.tex
+++ b/tables/results_seq_multiple_pos_HR@20.tex
@@ -1,17 +1,17 @@
 \begin{tabular}{lrrrrrrrrrr}
 \toprule
-     model &  position = 1 &  position = 2 &  position = 3 &  position = 4 &  position = 5 &  position = 6 &  position = 7 &  position = 8 &  position = 9 &  position = 10 \\
+ Algorithm &  position = 1 &  position = 2 &  position = 3 &  position = 4 &  position = 5 &  position = 6 &  position = 7 &  position = 8 &  position = 9 &  position = 10 \\
 \midrule
-        AR &        0.6289 &        0.6069 &        0.6310 &        0.6229 &        0.6120 &        0.6355 &        0.6508 &        0.6339 &        0.6591 &         0.6408 \\
-        SR &        0.6254 &        0.6079 &        0.6358 &        0.6357 &        0.6187 &        0.6598 &        0.6667 &        0.6568 &        0.6585 &         0.6711 \\
-     SR\_BR &        0.6328 &        0.6130 &        0.6229 &        0.6443 &        0.6409 &        0.6322 &        0.6585 &        0.6429 &        0.6354 &         0.6652 \\
-        CT &        0.6380 &        0.6221 &        0.6395 &        0.6434 &        0.6130 &        0.6534 &        0.6622 &        0.6521 &        0.6669 &         0.6616 \\
-      SKNN &        0.6492 &        0.6175 &        0.6278 &        0.6166 &        0.6084 &        0.6274 &        0.6628 &        0.6270 &        0.6599 &         0.6358 \\
-      STAN &        0.5728 &        0.5759 &        0.5938 &        0.5999 &        0.5809 &        0.6108 &        0.6281 &        0.6125 &        0.6467 &         0.6133 \\
-     VSTAN &        0.1747 &        0.2530 &        0.2870 &        0.2788 &        0.3384 &        0.3625 &        0.3973 &        0.3860 &        0.4434 &         0.4192 \\
- VSTAN\_EBR &        0.5780 &        0.5848 &        0.5962 &        0.6071 &        0.6003 &        0.5957 &        0.6231 &        0.6236 &        0.6038 &         0.6237 \\
-   GRU4Rec &        0.1738 &        0.1656 &        0.1710 &        0.1699 &        0.1784 &        0.1757 &        0.1888 &        0.2021 &        0.1809 &         0.1637 \\
- GRU4Rec\_R &        0.6083 &        0.5960 &        0.5983 &        0.6143 &        0.6153 &        0.6092 &        0.6232 &        0.6170 &        0.6164 &         0.6341 \\
-  HGRU4Rec &        0.1343 &        0.1376 &        0.1452 &        0.1608 &        0.1374 &        0.1241 &        0.1383 &        0.1465 &        0.1617 &         0.1529 \\
+        AR &        0.7821 &        0.7905 &        0.7634 &        0.7955 &        0.7684 &        0.7796 &        0.7827 &        0.7952 &        0.7976 &         0.7852 \\
+        SR &        0.7846 &        0.7844 &        0.7731 &        0.7944 &        0.7765 &        0.7873 &        0.7853 &        0.7911 &        0.7994 &         0.7946 \\
+     SR\_BR &        0.7659 &        0.7655 &        0.7615 &        0.7849 &        0.7591 &        0.7571 &        0.7804 &        0.7716 &        0.7963 &         0.7757 \\
+        CT &        0.7956 &        0.7876 &        0.7846 &        0.7938 &        0.7855 &        0.7836 &        0.7882 &        0.7913 &        0.7996 &         0.8052 \\
+      SKNN &        0.7951 &        0.7881 &        0.7684 &        0.7947 &        0.7755 &        0.7744 &        0.7705 &        0.7833 &        0.7915 &         0.7891 \\
+      STAN &        0.7498 &        0.7505 &        0.7449 &        0.7437 &        0.7495 &        0.7489 &        0.7385 &        0.7503 &        0.7551 &         0.7471 \\
+     VSTAN &        0.4890 &        0.5308 &        0.5717 &        0.6006 &        0.6158 &        0.5994 &        0.6394 &        0.6332 &        0.6514 &         0.6528 \\
+ VSTAN\_EBR &        0.7362 &        0.7448 &        0.7529 &        0.7726 &        0.7538 &        0.7574 &        0.7722 &        0.7611 &        0.7761 &         0.7721 \\
+   GRU4Rec &        0.4928 &        0.4659 &        0.4751 &        0.4966 &        0.5053 &        0.4869 &        0.5186 &        0.5011 &        0.5091 &         0.5188 \\
+ GRU4Rec\_R &        0.7684 &        0.7641 &        0.7514 &        0.7964 &        0.7608 &        0.7603 &        0.7771 &        0.7740 &        0.7787 &         0.7705 \\
+  HGRU4Rec &        0.4114 &        0.4425 &        0.4598 &        0.4965 &        0.4992 &        0.5122 &        0.5260 &        0.5012 &        0.5158 &         0.5174 \\
 \bottomrule
 \end{tabular}
