--- a/tables/results_seq_single.tex
+++ b/tables/results_seq_single.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{lrrrrrrrrr}
 \toprule
-     model &  HitRate@1 &  HitRate@5 &  HitRate@10 &  HitRate@20 &   MRR@5 &  MRR@10 &  MRR@20 &  Coverage@20 &  Popularity@20 \\
+ Algorithm &  HitRate@1 &  HitRate@5 &  HitRate@10 &  HitRate@20 &   MRR@5 &  MRR@10 &  MRR@20 &  Coverage@20 &  Popularity@20 \\
 \midrule
         AR &     0.5189 &     0.6781 &      0.7420 &      0.7988 &  0.5796 &  0.5882 &  0.5921 &       0.2237 &         0.0733 \\
         SR &     0.5188 &     0.6933 &      0.7540 &      0.8058 &  0.5878 &  0.5959 &  0.5995 &       0.6626 &         0.0724 \\
